--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "node": "0.11.13"
   },
   "scripts": {
-    "start": "NODE_PATH=./config:./app/controllers NODE_ENV=development ./node_modules/.bin/nodemon server.js",
-    "test": "NODE_PATH=./config:./app/controllers NODE_ENV=test ./node_modules/.bin/mocha --reporter spec --timeout 10000 test/test-*.js"
+    "start": "export NODE_PATH='./app/controllers'  export NODE_ENV='development'  ./node_modules/.bin/nodemon server.js",
+    "test": "NODE_PATH=./config;./app/controllers NODE_ENV=test ./node_modules/.bin/mocha --reporter spec --timeout 10000 test/test-*.js"
   },
   "dependencies": {
     "async": "0.9.0",
